# StripMasterAI_bot

./: .coverage  .flake8  .gitignore  README.md  bot.py  db.py  edit_img.py  markups.py  paymont.py  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py  translations.py  users.txt
handlers/: __init__.py  admin.py  donate.py  menu.py  photo.py  start.py
locales/: chinese.yaml  en.yaml  es.yaml  fr.yaml  ru.yaml
prompts/: busts.yaml  prompts.yaml
services/: image.py
services/payment/: payment.py  payment_aaio.py  payment_rukassa.py
services/repositories/: referral.py  system.py  transaction.py  user.py
tests/: conftest.py
tests/db/core/: test_system_repository.py
tests/db/referral/: test_referral_repository.py
tests/db/transactions/: test_transaction_repository.py
tests/db/users/: test_user_repository.py
tests/handlers/admin/: test_admin_handlers.py
tests/handlers/donate/: test_donate_handlers.py
tests/handlers/menu/: test_menu_handlers.py
tests/handlers/photo/: test_photo_handlers.py
tests/handlers/start/: test_start_handlers.py
tests/payment/: test_payment_service.py
utils/: i18n.py  localization.py  markups.py  prompts.py  settings.py
