[project]
name = "my_bot"
version = "0.1.0"
description = "Telegram bot using aiogram with payment and referral system"
requires-python = ">=3.10"
dependencies = [
  "asyncpg==0.29.0",
  "requests==2.31.0",
  "aiogram==2.14.2",
  "aiohttp==3.8.6",
  "pillow==10.3.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
exclude = [
  ".git",
  "__pycache__",
  "venv",
  ".venv",
  ".mypy_cache",
  ".pytest_cache"
]
ignore = [
  "E203",
  "W503"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.setuptools.optional-dependencies]
dev = [
  "flake8==7.2.0",
  "black==25.1.0",
  "isort==6.0.1",
  "pytest==8.3.5",
  "pytest-asyncio==1.0.0",
  "aioresponses==0.7.8"
]